--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "bundler",
     "useDefineForClassFields": true,
     "paths": {
+      "@features/*": ["./src/features/*"],
       "@layouts/*": ["./src/layouts/*"],
       "@screens/*": ["./src/screens/*"],
       "@ui/*": ["./src/ui/*"]
