--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "rsbuild dev --open",
     "build": "rsbuild build",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "lint:fix": "eslint . --ext .js,.ts,.tsx --fix"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@rsbuild/core": "^0.4.0",
     "@rsbuild/plugin-react": "^0.4.0",
+    "@stylistic/eslint-plugin": "^1.6.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
