--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@rsbuild/core": "^0.4.0",
     "@rsbuild/plugin-react": "^0.4.0",
+    "@rsbuild/plugin-svgr": "^0.4.1",
     "@stylistic/eslint-plugin": "^1.6.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.18",
