--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "rsbuild dev --open",
     "build": "rsbuild build",
     "preview": "rsbuild preview",
-    "lint:fix": "eslint . --ext .js,.ts,.tsx --fix"
+    "lint:fix": "eslint . --ext .js,.ts,.tsx --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -26,7 +27,12 @@
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "eslint": "^8.56.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "lint-staged": {
+    "**/*.{js,ts,tsx}": "eslint --fix"
   }
 }
