--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.0",
-    "react-select-search": "^4.1.7",
+    "react-select": "^5.8.0",
     "socket.io-client": "^4.7.4",
     "zustand": "^4.5.0"
   },
